--- a/CeraParkUpdated/photos.html
+++ b/CeraParkUpdated/photos.html
@@ -27,55 +27,55 @@
 <!--the slideshow of images-->
 <div class="slideshowContainer">
     <div class="mySlides fade">
-        <img src="cpPictures/IMG_2027.jpg" style="width:100%">
+        <img src="images/IMG_2027.jpg" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="cpPictures/IMG_2230.jpg" style="width:100%">
+        <img src="images/IMG_2230.jpg" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="cpPictures/IMG_2170.jpg" style="width:100%">
+        <img src="images/IMG_2170.jpg" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="cpPictures/IMG_2133.jpg" style="width:100%">
+        <img src="images/IMG_2133.jpg" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="cpPictures/IMG_2124.jpg" style="width:100%">
+        <img src="images/IMG_2124.jpg" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="cpPictures/IMG_2109.jpg" style="width:100%">
+        <img src="images/IMG_2109.jpg" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="cpPictures/IMG_2068.jpg" style="width:100%">
+        <img src="images/IMG_2068.jpg" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="cpPictures/IMG_2056.jpg" style="width:100%">
+        <img src="images/IMG_2056.jpg" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="cpPictures/IMG_1829.jpg" style="width:100%">
+        <img src="images/IMG_1829.jpg" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="cpPictures/IMG_1889.jpg" style="width:100%">
+        <img src="images/IMG_1889.jpg" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="cpPictures/IMG_1946.jpg" style="width:100%">
+        <img src="images/IMG_1946.jpg" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="cpPictures/IMG_2038.jpg" style="width:100%">
+        <img src="images/IMG_2038.jpg" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="cpPictures/IMG_2091.jpg" style="width:100%">
+        <img src="images/IMG_2091.jpg" style="width:100%">
     </div>
 
     <!-- Next and previous buttons -->
