--- a/cpWebsite/reviews.html
+++ b/cpWebsite/reviews.html
@@ -24,7 +24,7 @@
 
 <!--Text and Icon on top of background water image-->
 <div class="sloganAndIcon">
-    <img class="waterPic" src="images/IMG_2138.jpg" width=100% alt="sunset view GIF of the Wisconsin River"/>
+    <img class="waterPic" src="images/15.JPG" width=100% alt="sunset view GIF of the Wisconsin River"/>
     <img id="firstReviewIcon" src="images/reviewsIcon.png" alt="Speech Bubble Icon"/>
     <h1 class="interest">Interested in staying with us? Hear what others had to say about their stay
         at Cera Park.</h1>
