--- a/cpWebsite/about.html
+++ b/cpWebsite/about.html
@@ -14,7 +14,7 @@
 <body>
 <!--Nav Bar that appears when you start scrolling-->
 <div class="navbar">
-    <a href="index.html" class="logo"><img src="images/CPlogoBlack.svg" alt="Cera Park logo"></a>
+    <a href="index.html" class="logo"><img src="images/CPlogoBlack.svg" alt="Cera Park Logo"></a>
     <div class="navBarMenu">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -25,7 +25,7 @@
 </div>
 
 <!--background-->
-<img class="fullScreenPic" src="images/stringLights.jpg" width=100% alt="String light Scene"/>
+<img class="fullScreenPic" src="images/stringLights.jpg" width=100% alt="String lights Scene"/>
 
 <article class="typewriterOverlay">
     <div class="typewriterInvite">
@@ -141,6 +141,7 @@
         css.innerHTML = ".txtRotate > .wrap { border-right: 0.08em solid #666 }";
         document.body.appendChild(css);
     };
+
 </script>
 </body>
 </html>
