--- a/cpWebsite/index.html
+++ b/cpWebsite/index.html
@@ -16,7 +16,7 @@
 
 <!--Nav Bar that appears when you start scrolling-->
 <div class="navbar">
-    <a href="index.html" class="logo"><img src="images/CPlogoBlack.svg" alt="Cera Park logo"></a>
+    <a href="index.html" class="logo"><img src="images/CPlogoBlack.svg" alt="Cera Park Logo"></a>
     <div class="navBarMenu">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
