--- a/cpWebsite/photos.html
+++ b/cpWebsite/photos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Photos</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="navBar.css">
@@ -27,55 +27,55 @@
 <!--the slideshow of images-->
 <div class="slideshowContainer">
     <div class="mySlides fade">
-        <img src="images/3.JPG" style="width:100%">
+        <img src="images/ceraParkSignage.JPG" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/1.JPG" style="width:100%">
+        <img src="images/wisconsinRiverView.JPG" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/4.JPG" style="width:100%">
+        <img src="images/babyGeeseCeraPark.JPG" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/5.JPG" style="width:100%">
+        <img src="images/picnicTableWaterView.JPG" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/6.JPG" style="width:100%">
+        <img src="images/dockViewCeraPark.JPG" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/7.JPG" style="width:100%">
+        <img src="images/dockAndWIRiver.JPG" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/8.JPG" style="width:100%">
+        <img src="images/firewoodCeraPark.JPG" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/9.JPG" style="width:100%">
+        <img src="images/poolLayoutView.JPG" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/10.JPG" style="width:100%">
+        <img src="images/poolAndSlide.JPG" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/11.JPG" style="width:100%">
+        <img src="images/mushroomSprinklerCeraPark.JPG" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/12.JPG" style="width:100%">
+        <img src="images/miniGolfCeraPark.JPG" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/13.JPG" style="width:100%">
+        <img src="images/miniGolfCeraPark2.JPG" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/14.JPG" style="width:100%">
+        <img src="images/141.JPG" style="width:100%">
     </div>
 
     <!-- Next and previous buttons -->
@@ -99,6 +99,7 @@
         <span class="dot" onclick="currentSlide(11)"></span>
         <span class="dot" onclick="currentSlide(12)"></span>
         <span class="dot" onclick="currentSlide(13)"></span>
+        <span class="dot" onclick="currentSlide(14)"></span>
 
     </div>
 
