--- a/cpWebsite/reviews.html
+++ b/cpWebsite/reviews.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Reviews</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="navBar.css">
@@ -24,7 +24,7 @@
 
 <!--Text and Icon on top of background water image-->
 <div class="sloganAndIcon">
-    <img class="waterPic" src="images/15.JPG" width=100% alt="sunset view GIF of the Wisconsin River"/>
+    <img class="waterPic" src="images/treeTrunkAndCampsite.JPG" width=100% alt="sunset view GIF of the Wisconsin River"/>
     <img id="firstReviewIcon" src="images/reviewsIcon.png" alt="Speech Bubble Icon"/>
     <h1 class="interest">Interested in staying with us? Hear what others had to say about their stay
         at Cera Park.</h1>
