--- a/cpWebsite/contact.html
+++ b/cpWebsite/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Contact Us</title>
     <link rel="stylesheet" type="text/css" href="navBar.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
