--- a/cpWebsite/index.html
+++ b/cpWebsite/index.html
@@ -22,7 +22,8 @@
         <a href="about.html">About</a>
         <a href="photos.html">Photos</a>
         <a href="reviews.html">Reviews</a>
-        <a href="contact.html" id="lastMenuOption">Contact Us</a>
+        <a href="contact.html">Contact Us</a>
+        <a href="contact.html" id="lastMenuOption">Reserve</a>
     </div>
 </div>
 
@@ -76,7 +77,7 @@
 
 <div class="bottomWaterBG">
     <div class="caption">
-        <span class="border">COME VISIT!</span>
+        <span class="border"><a id="reserve" href="contact.html">RESERVE A SITE</a></span>
     </div>
 </div>
 
