--- a/cpWebsite/index.html
+++ b/cpWebsite/index.html
@@ -13,6 +13,7 @@
 
 </head>
 <body>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!--Nav Bar that appears when you start scrolling-->
 <div class="navbar" id="myNavBar">
