--- a/cpWebsite/index.html
+++ b/cpWebsite/index.html
@@ -19,7 +19,7 @@
 <div class="navbar" id="myNavBar">
     <a href="index.html" class="logo"><img src="images/CPlogoBlack.svg" alt="Cera Park Logo"></a>
     <div class="navBarMenu">
-        <a href="index.html">Home</a>
+        <a href="index.html" class="active">Home</a>
         <a href="about.html">About</a>
         <a href="photos.html">Photos</a>
         <a href="reviews.html">Reviews</a>
