--- a/cpWebsite/contact.html
+++ b/cpWebsite/contact.html
@@ -19,7 +19,8 @@
         <a href="about.html">About</a>
         <a href="photos.html">Photos</a>
         <a href="reviews.html">Reviews</a>
-        <a href="contact.html" id="lastMenuOption">Contact Us</a>
+        <a href="contact.html">Contact Us</a>
+        <a href="contact.html" id="lastMenuOption">Reserve</a>
     </div>
 </div>
 
