--- a/cpWebsite/photos.html
+++ b/cpWebsite/photos.html
@@ -20,62 +20,63 @@
         <a href="about.html">About</a>
         <a href="photos.html">Photos</a>
         <a href="reviews.html">Reviews</a>
-        <a href="contact.html" id="lastMenuOption">Contact Us</a>
+        <a href="contact.html">Contact Us</a>
+        <a href="contact.html" id="lastMenuOption">Reserve</a>
     </div>
 </div>
 
 <!--the slideshow of images-->
 <div class="slideshowContainer">
     <div class="mySlides fade">
-        <img src="images/ceraParkSignage.JPG" style="width:100%">
+        <img src="images/ceraParkSignage.JPG" style="width:100%" alt="Cera Park Roadfront Sign">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/wisconsinRiverView.JPG" style="width:100%">
+        <img src="images/wisconsinRiverView.JPG" style="width:100%" alt="view of the Wisconsin River">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/babyGeeseCeraPark.JPG" style="width:100%">
+        <img src="images/babyGeeseCeraPark.JPG" style="width:100%" alt="Wildlife (geese) spotted in the park">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/picnicTableWaterView.JPG" style="width:100%">
+        <img src="images/picnicTableWaterView.JPG" style="width:100%" alt="Views of the River">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/dockViewCeraPark.JPG" style="width:100%">
+        <img src="images/dockViewCeraPark.JPG" style="width:100%" alt="Dock on the Wisconsin River">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/dockAndWIRiver.JPG" style="width:100%">
+        <img src="images/dockAndWIRiver.JPG" style="width:100%" alt="Another dock view on the Wisconsin River">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/firewoodCeraPark.JPG" style="width:100%">
+        <img src="images/firewoodCeraPark.JPG" style="width:100%" alt="Firewood available to purchase on site">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/poolLayoutView.JPG" style="width:100%">
+        <img src="images/poolLayoutView.JPG" style="width:100%" alt="Cera Park Pool view">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/poolAndSlide.JPG" style="width:100%">
+        <img src="images/poolAndSlide.JPG" style="width:100%" alt="Cera Park pool and slides">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/mushroomSprinklerCeraPark.JPG" style="width:100%">
+        <img src="images/mushroomSprinklerCeraPark.JPG" style="width:100%" alt="Cera Park Pool and Mushroom Sprinkler">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/miniGolfCeraPark.JPG" style="width:100%">
+        <img src="images/miniGolfCeraPark.JPG" style="width:100%" alt="Mini golf at Cera Park">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/miniGolfCeraPark2.JPG" style="width:100%">
+        <img src="images/miniGolfCeraPark2.JPG" style="width:100%" alt="Mini golf at Cera Park">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/141.JPG" style="width:100%">
+        <img src="images/miniGolfCeraPark3.JPG" style="width:100%" alt="Mini golf at Cera Park">
     </div>
 
     <!-- Next and previous buttons -->
@@ -99,15 +100,12 @@
         <span class="dot" onclick="currentSlide(11)"></span>
         <span class="dot" onclick="currentSlide(12)"></span>
         <span class="dot" onclick="currentSlide(13)"></span>
-        <span class="dot" onclick="currentSlide(14)"></span>
 
     </div>
 
-
-
 <!--JavaScript for the slideshow-->
 <script>
-    var slideIndex = 1;
+    let slideIndex = 1;
     showSlides(slideIndex);
 
     // Next/previous controls
@@ -121,9 +119,9 @@
     }
 
     function showSlides(n) {
-        var i;
-        var slides = document.getElementsByClassName("mySlides");
-        var dots = document.getElementsByClassName("dot");
+        let i;
+        let slides = document.getElementsByClassName("mySlides");
+        let dots = document.getElementsByClassName("dot");
         if (n > slides.length) {
             slideIndex = 1
         }
