--- a/CeraParkRedesign/about.html
+++ b/CeraParkRedesign/about.html
@@ -49,15 +49,14 @@
     <div class="column">
         <img id="camperSection" class="aboutIcons" src="images/camperIcon.png" alt="Icon of a camper van"/>
         <p class="info" id="campText"><br>We offer a range of campsites, from primitive to electric. Our differing
-        lot sizes allow for all camper sizes. Our showers and restrooms are located at the heart of the campground, allowing for close
+        lot sizes allow for all camper sizes. Our showers and restrooms are located at the heart of the campground, for close
         proximity to every campsite.</p>
     </div>
 
     <div class="column">
         <img id="swimmingSection" class="aboutIcons" src="images/swimmingIcon.png" alt="icon of a swimming pool"/>
         <p class="info" id="poolText"><br>Come out and swim in one of our lifeguard-monitored pools. We have a large pool,
-            slides and a
-            kiddie pool. Pool use is included with your stay!</p>
+            slides and a kiddie pool. Pool use is included with your stay!</p>
     </div>
 
     <div class="column">
@@ -68,7 +67,7 @@
 
     <div class="column">
         <img id="fishingSection" class="aboutIcons" src="images/fishingIcon.png" alt="icon of a fish and hook"/>
-        <p class="info" id="fishText"><br>Try your hand at fishing on the Wisconsin River. Whether your fishing from shore,
+        <p class="info" id="fishText"><br>Try your hand at fishing on the Wisconsin River. Whether you're fishing from shore,
             off one of our nine docks, or bring your own boat, we have a prime location to reel in your next fish!</p>
     </div>
 
