--- a/CeraParkRedesign/index.html
+++ b/CeraParkRedesign/index.html
@@ -61,7 +61,7 @@
 	</div> 
 	<!-- text -->
 	<div class="paragraphs" style="position:relative;">
-		<p>We are a private campground located on the Wisconsin River. With a range of amenities, including nine docks for boats and fishing, there's something for everyone in your family to enjoy. </p>
+		<p>We are located on the Wisconsin River. With a range of amenities, including nine docks for boats and fishing, there's something for everyone in your family to enjoy. </p>
 	</div>
 		
 	<!--photo background-->
