--- a/CeraParkRedesign/contact.html
+++ b/CeraParkRedesign/contact.html
@@ -85,6 +85,15 @@
             x.className = "topnav";
         }
     }
+
+</script>
+<script src="https://www.google.com/recaptcha/api.js?render=reCAPTCHA_site_key"></script>
+<script>
+    grecaptcha.ready(function() {
+        grecaptcha.execute('reCAPTCHA_site_key', {action: 'homepage'}).then(function(token) {
+        ...
+        });
+    });
 </script>
 </body>
 </html>
