--- a/CeraParkRedesign/forms.html
+++ b/CeraParkRedesign/forms.html
@@ -39,14 +39,14 @@
 
 <div class="forms">
     <div class="row">
-    <div class="col"><button><a class="square" href="forms/CeraParkMap.pdf">Campground Map</a></button></div>
-    <div class="col"><button><a class="square" href="forms/2019Newsletter.pdf">2019 Cera Park Newsletter</a></button></div>
-    <div class="col"><button><a class="square" href="forms/ParkRegulations.pdf">Park Regulations</a></button></div>
-    <div class="col"><button><a class="square" href="forms/CampgroundSiteIndex.pdf">Site Index</a></button></div>
-    <div class="col"><button><a class="square" href="forms/ShelterRentalApp.pdf">Shelter Rental Application</a></button></div>
-    <div class="col"><button><a class="square" href="forms/LargeShelterPrivateRules.pdf">Large Shelter Rules</a></button></div>
-    <div class="col"><button><a class="square" href="forms/smallShelterPrivateRules.pdf">Small Shelter Rules</a></button></div>
-    <div class="col"><button><a class="square" href="tel:1-715-213-5571">Call for Shelter Reservations</a></button></div>
+    <div class="col"><button><a href="forms/CeraParkMap.pdf">Campground Map</a></button></div>
+    <div class="col"><button><a href="forms/2019Newsletter.pdf">2019 Cera Park Newsletter</a></button></div>
+    <div class="col"><button><a href="forms/ParkRegulations.pdf">Park Regulations</a></button></div>
+    <div class="col"><button><a href="forms/CampgroundSiteIndex.pdf">Site Index</a></button></div>
+    <div class="col"><button><a href="forms/ShelterRentalApp.pdf">Shelter Rental Application</a></button></div>
+    <div class="col"><button><a href="forms/LargeShelterPrivateRules.pdf">Large Shelter Rules</a></button></div>
+    <div class="col"><button><a href="forms/smallShelterPrivateRules.pdf">Small Shelter Rules</a></button></div>
+    <div class="col"><button><a href="tel:1-715-213-5571">Call for Shelter Reservations</a></button></div>
     </div>
 </div>
 
