--- a/CeraParkRedesign/contact.html
+++ b/CeraParkRedesign/contact.html
@@ -28,7 +28,7 @@
     <a href="forms.html">Forms</a>
     <a href="contact.html">Contact Us</a>
     <a href="contact.html">Reserve</a>
-    <a href="https://www.facebook.com/CERA-Park-290884687751251/" class="fa fa-facebook"></a>
+    <a href="https://www.facebook.com/CERA-Park-290884687751251/" target="_blank" class="fa fa-facebook"></a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
     </a>
